Codificacion de geolocation

--- a/location/templates/base.html
+++ b/location/templates/base.html
@@ -44,13 +44,11 @@
 
 			<ul class="list center-block wrap">
 
-				<li class="item"><a href="">TIGO</a></li>
+				<li class="item"><a href="/">GEO</a></li>
 
-				<li class="item"><a href="">TIGO STAR</a></li>
+				<li class="item"><a href="/sent">GEO STAR</a></li>
 
-				<li class="item"><a href="">TIGO MONEY</a></li>
-
-				<li class="item"><a href="">TIGO BUSINESS</a></li>
+				<li class="item"><a href="/view">GEO VIEW</a></li>
 
 			</ul>
 
@@ -74,11 +72,6 @@
 
 	</section>
 
-	<section class="container">
-
-		{% block container %} {% endblock %}
-
-	</section>
 
 </body>
 
