Modificacion del modelo y add ipaddress

--- a/location/templates/form.html
+++ b/location/templates/form.html
@@ -18,7 +18,7 @@
 
         <input id="lon" type="text" class="input" disabled> {{ form.longitude|addcss:'input' }} <div class="error"> {{ form.longitude.errors}} </div>
 
-        <label for="phone">Phone:</label>
+        <label for="phone">IP ADDRESS:</label>
 
         {{ form.phone|addcss:'input' }} <div class="error"> {{ form.phone.errors}} </div>
 
